# xhs_mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.local-fix  README.md  compose.local-fix.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
src/xhs_read_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  server.py  service.py
src/xhs_read_mcp/actions/: __init__.py  comments.py  common.py  feed_detail.py  login.py  search.py
src/xhs_read_mcp/browser/: __init__.py  auth_store.py  manager.py  page_contract.py
src/xhs_read_mcp/models/: __init__.py  public.py  source.py
tests/browser/: test_browser_lifecycle.py  test_login_diagnostics.py  test_transports.py
tests/live_xhs/: test_live_smoke.py
tests/unit/: test_auth_store.py  test_browser_manager.py  test_cli.py  test_comment_loader.py  test_common_action.py  test_config.py  test_errors_and_logging.py  test_feed_detail_action.py  test_login_action.py  test_login_coordinator.py  test_models.py  test_page_contract.py  test_search_action.py  test_server.py  test_service.py
